--- a/apuntesYPruebasClase.html
+++ b/apuntesYPruebasClase.html
@@ -50,9 +50,9 @@
 
     <ul>
         Dentro de u l 
-        <li> un li dentro de un ul</li>
-        <li> un li dentro de un ul</li>
-        <li> un li dentro de un ul</li>
+        <li> dentro de ul esto es li </li>
+        <li> dentro de ul esto es li</li>
+        <li> dentro de ul esto es li</li>
         <li></li>
         <li></li>
         <li></li>
@@ -61,7 +61,7 @@
 
     <p>La diferencia arriba es que uno esta enumerado y el otro no , aparece mas tipo " item " 
 
-        por otra parte, la estructura es en un tag hb3 y se inicia ol o ul y luego cada item con li
+        por otra parte, la estructura es en un tag h3 y se inicia ol o ul y luego cada item con li
         es buena practica los li dentro de los ol segun... 
     </p>
 
